# is-muni-lib

./: README.md  pyproject.toml
src/is_api/attributes/: attributes.py  empty_attributes.py  odbor_ids_attributes.py  predmet_attributes.py  predmet_id_attributes.py
src/is_api/commands/: command.py  command_invoker.py  set_obdobi_command.py
src/is_api/data/: combined_mark.py  faculty.py  mark.py  operator.py  term.py
src/is_api/scrapers/: aktualni_obdobi_scraper.py  odbor_ids_scraper.py  predmet_id_scraper.py  scraper.py  statistika_kreditu_scraper.py
src/is_api/utils/: creadentials_manager.py  credentials.py  headers.py  requestor.py  string_credentials.py  value_credentials.py
